--- a/TFC_John/Properties/Resources.resx
+++ b/TFC_John/Properties/Resources.resx
@@ -118,16 +118,37 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="undraw_Add_files_re_v09g" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\images\undraw_Add_files_re_v09g.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="undraw_Design_objectives_re_94pd" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\undraw_Design_objectives_re_94pd.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="NewEmployee_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\images\NewEmployee_32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons8_money_bag_rupee_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icons8_money_bag_rupee_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="avtar-2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\avtar-2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="undraw_Design_objectives_re_94pd" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\images\undraw_Design_objectives_re_94pd.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icons8_add_user_group_man_man_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icons8_add_user_group_man_man_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons8_home_address_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icons8_home_address_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons8_shopping_cart_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icons8_shopping_cart_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons8_update_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icons8_update_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="undraw_Add_files_re_v09g" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\undraw_Add_files_re_v09g.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons8_male_user_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icons8_male_user_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="NewEmployee_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\NewEmployee_32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons8_save_as_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\icons\icons8_save_as_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
